; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_table.c_pfr_ktable_compare.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_table.c_pfr_ktable_compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pfr_ktable = type { i32, i32 }

@PF_TABLE_NAME_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pfr_ktable*, %struct.pfr_ktable*)* @pfr_ktable_compare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pfr_ktable_compare(%struct.pfr_ktable* %0, %struct.pfr_ktable* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pfr_ktable*, align 8
  %5 = alloca %struct.pfr_ktable*, align 8
  %6 = alloca i32, align 4
  store %struct.pfr_ktable* %0, %struct.pfr_ktable** %4, align 8
  store %struct.pfr_ktable* %1, %struct.pfr_ktable** %5, align 8
  %7 = load %struct.pfr_ktable*, %struct.pfr_ktable** %4, align 8
  %8 = getelementptr inbounds %struct.pfr_ktable, %struct.pfr_ktable* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.pfr_ktable*, %struct.pfr_ktable** %5, align 8
  %11 = getelementptr inbounds %struct.pfr_ktable, %struct.pfr_ktable* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @PF_TABLE_NAME_SIZE, align 4
  %14 = call i32 @strncmp(i32 %9, i32 %12, i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = load i32, i32* %6, align 4
  store i32 %17, i32* %3, align 4
  br label %26

18:                                               ; preds = %2
  %19 = load %struct.pfr_ktable*, %struct.pfr_ktable** %4, align 8
  %20 = getelementptr inbounds %struct.pfr_ktable, %struct.pfr_ktable* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.pfr_ktable*, %struct.pfr_ktable** %5, align 8
  %23 = getelementptr inbounds %struct.pfr_ktable, %struct.pfr_ktable* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @strcmp(i32 %21, i32 %24)
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %18, %16
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @strncmp(i32, i32, i32) #1

declare dso_local i32 @strcmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
